# winapp-rs

./: Cargo.toml  README.md
bindings/: Cargo.toml  build.rs
src/: lib.rs  splash.rs  webview2_setup.rs  window_attach.rs
src/win2/: error.rs  message_loop.rs  mod.rs  rect.rs  window.rs  window_enum.rs  window_event.rs
