[package]
name = "winapp-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { path = "bindings" }
reqwest = { version = "0.11.6", features = ["blocking"] }
web-view = "0.7"
crossbeam-channel = "0.5.1"
lazy_static = "1.4.0"

[dependencies.windows]
version = "0.26"
features = [
    "std",
]

