[package]
name = "bindings"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.26", features = ["build"] }

[build-dependencies]
windows = { version = "0.26", features = ["build"] }

[features]
default = ["std"]
std = []